--- a/frontend/src/assets/scss/material-kit/_dialogs.scss
+++ b/frontend/src/assets/scss/material-kit/_dialogs.scss
@@ -30,13 +30,15 @@
 
 .modal-body{
   padding: 24px 24px 16px;
-
+  max-height: 400px; 
+  overflow-y: auto;
   p{
     margin-top: 0;
   }
 }
 
 .modal-container {
+  // max-height: 500px; overflow-y: auto;
   max-width: 500px;
   margin: 0px auto;
   position: relative;
