--- a/frontend/src/assets/scss/material-kit/_mixins.scss
+++ b/frontend/src/assets/scss/material-kit/_mixins.scss
@@ -17,6 +17,7 @@
   .md-title,
   .md-list .md-list-item-content,
   .md-toolbar-toggle .icon-bar,
+  .md-alarm-toggle .icon-bar,
   &,
   &:hover,
   &:focus{
