--- a/frontend/src/assets/scss/material-kit/_responsive.scss
+++ b/frontend/src/assets/scss/material-kit/_responsive.scss
@@ -74,6 +74,7 @@
         .dropdown-toggle:not(.md-button):after,
         .dropdown-toggle .md-ripple:after,
         .md-list-item .md-button.md-button-link:not(.md-just-icon):not(.md-btn-fab):not(.md-icon-button):not(.md-toolbar-toggle) .md-ripple .md-button-content i,
+        .md-list-item .md-button.md-button-link:not(.md-just-icon):not(.md-btn-fab):not(.md-icon-button):not(.md-alarm-toggle) .md-ripple .md-button-content i,
         .md-list-item a .md-ripple p,
         .md-list-item-content i {
           color: $black-color !important;
@@ -209,6 +210,7 @@
     }
 
     .md-collapse-lateral .md-toolbar-toggle,
+    .md-collapse-lateral .md-alarm-toggle,
     .md-collapse-lateral .md-title {
       @include transition (0.33s, cubic-bezier(0.685, 0.0473, 0.346, 1));
 
@@ -266,7 +268,7 @@
     @include bottombar-x-rotation();
     @include bottombar-back-rotation();
 
-    .md-toolbar-toggle{
+    .md-toolbar-toggle, .md-alarm-toggle{
         .icon-bar:nth-child(2){
           top: 0px;
           @include bar-animation($topbar-back);
